--- a/boo/main.css
+++ b/boo/main.css
@@ -24,13 +24,13 @@
         font-family:inter;
     }
     .head{
-        font-size:25px;
+        font-size:20px;
         font-weight:thin;
         padding-bottom:10px;
     }
     .sub_head{
         color:#898484;
-        font-size:15px;
+        font-size:12px;
         padding-bottom:10px;
 
     }
@@ -39,14 +39,15 @@
 
     }
     .box{
-        width: 100%;
-        height: 40px;
-        margin-bottom: 30px;
-        border: 1px solid #000000;
-        padding:10px;
+       width: 90%;
+       height: 30px;
+       margin-bottom: 5px;
+       border: 1px solid #000000;
+       padding-left: 10px;
     }
     .terms_container{
          padding-bottom:30px;
+         font-size: 15px;
     }
     .radio_button{
        float:left;
